--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -28,7 +28,8 @@ spring:
     show-sql: true                # Hibernate? ???? SQL ??? ??? ??
     properties:
       hibernate:
-        format_sql: true          # ???? SQL ??? ????? ?? ?? ??
+        format_sql: true
+        default_batch_fetch_size: 10  # 한번에 들고오는 갯수 설정
     defer-datasource-initialization: true  # ?????? ???? ????? ???? JPA ?? ?? ??? ???
 
   output:
